add url lookup to plugin
