# src/plugin/api/routes/search.py
@@ -2,13 +2,16 @@ from utils import duckduckgo, web_request
 
 from flask import jsonify, request, abort
 
-def search_action(search_term):
-    search_results = duckduckgo(search_term, num_results=1)
+def search_action(search_term, num_results=3):
+    search_results = duckduckgo(search_term, num_results)
     page_results = [web_request(url) for _, url in search_results]
 
     return [
-        (title, url, body)
-        for (title, url), body in zip(search_results, page_results)
+        {
+            'title': title,
+            'url': url,
+            'body': body
+        } for (title, url), body in zip(search_results, page_results)
     ]
 
 def search(server):
@@ -30,20 +33,15 @@ def search(server):
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/SearchResult'
+                                type: array
+                                items:
+                                    $ref: '#/components/schemas/SearchResult'
                 400:
                     description: Invalid input, a required field is missing
-
         """
         if not request.json or 'query' not in request.json:
             abort(400)
 
-        title, url, body = search_action(request.json['query'])[0]
-
-        return jsonify({
-            'title': title,
-            'url': url,
-            'body': body
-        }), 200
+        return jsonify(search_action(request.json['query'], num_results=3)), 200
   
     return _search
